--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portofolio",
-  "homepage": "https://hafizhkanz.github.io/portofolio-mac/",
+  "homepage": "https://robertsusi.github.io/portofolio-mac/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
